# RdpInfo

./: .appveyor.yml  CMakeLists.txt  README.md
src/: RdpInfo.cpp  RdpInfo.def  RdpInfo.h  TerminalServicesSession.cpp  TerminalServicesSession.h  Wexception.cpp  Wexception.h  stdafx.h
